<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient">

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="@dimen/radius_default"
            android:layout_marginTop="128dp"
            android:background="@drawable/background_top_rounded"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentTempTextView"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/cityNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto_condensed_bold"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/currentTempTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_thin"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/cityNameTextView"
            app:layout_constraintTop_toBottomOf="@+id/cityNameTextView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/o"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/currentTempTextView"
            app:layout_constraintStart_toEndOf="@+id/currentTempTextView"
            app:layout_constraintTop_toTopOf="@+id/currentTempTextView"
            app:layout_constraintVertical_bias="0.35" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/c"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/currentTempTextView"
            app:layout_constraintStart_toEndOf="@+id/currentTempTextView"
            app:layout_constraintTop_toTopOf="@+id/currentTempTextView"
            app:layout_constraintVertical_bias="0.65" />

        <TextView
            android:id="@+id/tempTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/roboto_black"
            android:lineSpacingExtra="16sp"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/currentTempTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cityNameTextView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/location_icon"
            app:layout_constraintBottom_toBottomOf="@+id/cityNameTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cityNameTextView"
            app:srcCompat="@drawable/outline_person_pin_circle_24"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/tempImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/location_vector"
            app:layout_constraintEnd_toStartOf="@+id/tempTextView"
            app:layout_constraintStart_toEndOf="@+id/cityNameTextView"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_undraw_sunny_day_bk3m" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>